// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switcher style params color brand 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-17oz8x6-QxSwitcher-root"
    data-testid="testStyleParams-color-brand"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1m5agqc-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-qd46om-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color danger 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_danger QxSwitcher_position_left css-1tgbn08-QxSwitcher-root"
    data-testid="testStyleParams-color-danger"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-6oirjf-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-qd46om-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color info 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_info QxSwitcher_position_left css-nv78mj-QxSwitcher-root"
    data-testid="testStyleParams-color-info"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-6oirjf-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-qd46om-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color secondary 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_secondary QxSwitcher_position_left css-1vahdkv-QxSwitcher-root"
    data-testid="testStyleParams-color-secondary"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1m5agqc-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-qd46om-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color success 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_success QxSwitcher_position_left css-tglsfb-QxSwitcher-root"
    data-testid="testStyleParams-color-success"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-6oirjf-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-qd46om-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params color warning 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_warning QxSwitcher_position_left css-1j2b7rd-QxSwitcher-root"
    data-testid="testStyleParams-color-warning"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-6oirjf-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-qd46om-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params disabled false 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-17oz8x6-QxSwitcher-root"
    data-testid="testStyleParams-disabled-false"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1m5agqc-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-qd46om-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params disabled true 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_disabled QxSwitcher_position_left css-1rmbsj3-QxSwitcher-root"
    data-testid="testStyleParams-disabled-true"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      disabled=""
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-w8w2sd-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-1invj5k-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-qd46om-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params position left 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-17oz8x6-QxSwitcher-root"
    data-testid="testStyleParams-position-left"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1m5agqc-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-qd46om-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params position right 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_right css-17oz8x6-QxSwitcher-root"
    data-testid="testStyleParams-position-right"
  >
    <div
      class="QxSwitcher-content css-1ivt0id-QxSwitcher-content"
    >
      Статус
    </div>
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1m5agqc-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params size large 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_large QxSwitcher_color_brand QxSwitcher_position_left css-19zh71b-QxSwitcher-root"
    data-testid="testStyleParams-size-large"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1m5agqc-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-1cydd0j-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params size medium 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_medium QxSwitcher_color_brand QxSwitcher_position_left css-17oz8x6-QxSwitcher-root"
    data-testid="testStyleParams-size-medium"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1m5agqc-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-qd46om-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`Switcher style params size small 1`] = `
<DocumentFragment>
  <label
    class="QxSwitcher QxSwitcher_size_small QxSwitcher_color_brand QxSwitcher_position_left css-1oknul-QxSwitcher-root"
    data-testid="testStyleParams-size-small"
  >
    <input
      class="QxSwitcher-input css-7h2lkr-QxSwitcher-input"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="QxSwitcher-toggleContainer css-1m5agqc-QxSwitcher-toggleContainer"
    >
      <div
        class="QxSwitcher-toggle css-7ythuh-QxSwitcher-toggle"
      />
    </div>
    <div
      class="QxSwitcher-content css-bgher3-QxSwitcher-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;
